# pycorrfunc

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASING.md  meson.build  meson.options  pycorrfunc.code-workspace  pyproject.toml
.github/workflows/: tests.yaml
ci/: Dockerfile  Jenkinsfile
include/: cpp_utils.h  defs.h
lib/: cpp_utils.cpp  main.cpp
lib/common/: avx2_calls.h  avx512_calls.c  avx512_calls.h  avx_calls.h  cell_pair.h  cellarray.c  cellarray.h  cellarray_mocks.h  fast_acos.h  function_precision.h  gridlink.c  gridlink.h  gridlink_impl.c  gridlink_impl.h  gridlink_mocks.c  gridlink_mocks.h  gridlink_mocks_impl.h  gridlink_utils.c  gridlink_utils.h  macros.h  options.c  progressbar.c  progressbar.h  sse_calls.h  utils.c  utils.h  weights.c  weights.h
lib/theory/DD/: countpairs.c  countpairs.h  kernel_avx.c  kernel_avx512.c  kernel_fallback.c  kernel_sse42.c  kernelfuncs.h  kernels_avx.c  kernels_avx512.c  kernels_fallback.c  kernels_sse.c  kernels_sse42.c
lib/utils/: avx2_calls.h  avx512_calls.c  avx512_calls.h  avx_calls.h  cell_pair.h  cellarray.h  cellarray_mocks.h  function_precision.h  gridlink_impl.c  gridlink_impl.h  gridlink_mocks_impl.c  gridlink_mocks_impl.h  gridlink_utils.c  gridlink_utils.h  macros.h  progressbar.c  progressbar.h  sse_calls.h  utils.c  utils.h  weight_defs.h  weight_functions.h
scripts/: bench.py
src/pycorrfunc/: isa.py  theory.py
subprojects/: nanobind.wrap
tests/: test_theory.py
