[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'pycorrfunc'
version = '0.1.0'
description = 'A pythonic rewrite of the software infrastructure surrounding Corrfunc'
authors = [
  {name = 'Lehman Garrison', email = 'lgarrison@flatironinstitute.org'},
  {name = 'Peter McMaster', email = 'pjm2188@columbia.edu'},
]
dependencies = [
  'numpy',
  'astropy',
]
license = { file = "LICENSE" }
requires-python = ">= 3.9"

[project.optional-dependencies]
test = ["pytest"]

[tool.meson-python.args]
compile = ["-v"]
# setup = ["-Dbuildtype=debug"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
archs = "auto64"
test-command = "pytest -s {project}/tests"
test-extras = "test"
skip = "pp* *-musllinux_*"
build-verbosity = 1
manylinux-x86_64-image = "manylinux_2_28"


[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  # run abi3audit on wheels tagged with abi3
  'case "$(basename {wheel})" in *"-abi3-"*) pip install -U abi3audit && abi3audit --strict --report {wheel};; esac',
]
